Correct GetTerrain API
